--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!--Viktoriia start-->
+
     <header>
         <nav class="header-containernav" id="header">
             <div class="logo__container">
@@ -44,9 +44,8 @@
             <a href="#store" class="burger-bunner__button">Buy Honey</a>
         </div>
     </header>
-    <!--Viktoriia end-->
     <main>
-        <!--Yuriy Lavrin start-->
+
         <section class="heading__theme">
             <div class="heading__container">
                 <div class="heading">
@@ -70,9 +69,6 @@
             </div>
         </section>
 
-        <!--Yuriy Lavrin end-->
-
-        <!--Olha start-->
         <section class="main__services">
             <div class="services__header">
                 <h2 class="section-heading">
@@ -148,9 +144,7 @@
                 </div>
             </div>
         </section>
-        <!--Olha end-->
 
-        <!--Dmytro start-->
         <section id="about" class="main__about">
 
             <div class="main-about__container">
@@ -234,18 +228,6 @@
             </div>
 
         </section>
-        <!--Dmytro end-->
-
-        <!--VolodymyrLys start-->
-
-        <!--  OLD VARIANT, WITHOUT JS!
-        <div class="video-poster"> 
-            <div class="round-types">
-                <div class="play-button"></div>
-            </div>
-            <div class="video-caption">HOW HONEY IS MADE</div>
-        </div>  
-        -->
 
         <div class="slideshow-container">
             <div class="mySlides fade">
@@ -276,11 +258,6 @@
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
         </div>
-
-        <!--VolodymyrLys end-->
-
-        <!--VolodymyrLys start-->
-
         <div id="types" class="types-section-content">
             <div class="content-about">
                 <p class="honney-caption-collor">TYPES OF HONEY</p>
@@ -331,9 +308,6 @@
                 </div>
             </div>
         </div>
-        <!--VolodymyrLys end-->
-
-        <!-- Cart popup start -->
         <section id="cart-button">
             <div class="cart__button" id="launch-btn">
                 <div class="cart-button__counter">
@@ -354,10 +328,6 @@
                 </div>
             </div>
         </section>
-        <!-- Cart popup end -->
-
-        <!--Mike Litovka start-->
-
         <section id="store" class="main__store">
             <div class="store__container">
                 <div class="store__header">
@@ -381,10 +351,6 @@
                 </div>
             </div>
         </section>
-
-        <!--Mike Litovka end-->
-
-        <!--Anna start-->
         <div class="steps__hunny-line">
         </div>
         <section id="steps" class="main__steps">
@@ -400,7 +366,6 @@
                     We are a small family-owned swath chain in California and we produce a limited amount of honey every
                     season. If you want to buy honey, the information below is for you:
                 </p>
-                <!--Anna start-->
 
                 <div class="cards__container">
                     
@@ -408,11 +373,6 @@
                 <a href="#contacts" class="button-steps">Have a Special Request?</a>
             </div>
         </section>
-
-        <!--Anna end-->
-
-
-        <!--Rostyslav start-->
         <section id="testimonials" class="block__review">
             <div class="review">
                 <div class="review_container">
@@ -476,9 +436,6 @@
                 </div>
             </div>
         </section>
-        <!--Rostyslav end-->
-
-        <!--Sonia start-->
         <div class="numbers__conteiner">
             <div class="numbers">
                 <h3 class="number">2574</h3>
@@ -501,9 +458,7 @@
                 <p class="text__number">Bees working for you</p>
             </div>
         </div>
-        <!--Sonia end-->
 
-        <!--Sonia start-->
         <section class="conteiner__blog">
             <div class="conteiner__blog__h">
                 <h2 class="section-heading">BLOG</h2>
@@ -556,9 +511,6 @@
                 </div>
             </div>
         </section>
-        <!--Sonia end-->
-
-        <!--Olha start-->
         <section class="main__faq">
             <div class="faq__image-container">
                 <img class="faq-image" src="img/faq/honeycombs.jpg" alt="Honeycombs with honey picture">
@@ -677,9 +629,6 @@
                 </div>
             </div>
         </section>
-        <!--Olha end-->
-
-        <!--Dmytro start-->
         <section id="contacts" class="main__contacts">
             <div class="contacts-container">
                 <div class="contacts-main__container">
@@ -740,8 +689,7 @@
                     </div>
                 </div>
                 <div class="contacts__form">
-                    <!--https://formspree.io/f/xqkjzwqo-->
-                    <form id="contact-form" action="https://formspree.io/f/xqkjzwqo" method="POST">
+                    <form id="contact-form" action="" method="POST">
                         <input id="contact-input-name" class="contact-input" type="text" name="user's name"
                             placeholder="Enter your full name*" required>
                         <input id="contact-input-tel" class="contact-input" type="tel" name="user's phone number"
@@ -756,9 +704,6 @@
                 </div>
             </div>
         </section>
-        <!--Dmytro end-->
-
-        <!--Dmytro start-->
         <div id="gallery" class="gallery__section">
             <div class="gallery-wrapper">
                 <img src="img/gallery/gallery-beekeeper.jpeg" alt="photo of beekeeper">
@@ -768,10 +713,7 @@
                 <img src="img/gallery/gallery-honey.jpeg" alt="photo with honey">
             </div>
         </div>
-        <!--Dmytro end-->
     </main>
-
-    <!--Rostyslav start-->
     <footer class="footer">
         <div class="footer__container">
             <nav class="footer__nav">
@@ -813,8 +755,6 @@
 
         </div>
     </footer>
-    <!--Rostyslav end-->
-    <!-- Scroll up, Volodymyr Lys-->
     <a href="#header" class="pageup">
         <img src="img/types/up.svg" alt="UP"> 
     </a>
